bad/return_string_in_func_returning_bool.example_compiler_output
ERROR
[1mbad/return_string_in_func_returning_bool.lat:2:26: [1;31merror: [0;1mreturned value of type `string` is not convertible to return type `boolean`[m
boolean test() { return ""; }
                         [1;32m^[m
